[b]0.39beta[/b] (Mar 28, 2014)
*Reverted to Azilroka's skin file after his latest update in AddOnSkins (v2.15). A bit more fine tuning may needed.
*Removed the font.lua file. No need to force users to use BenikUI. On it's final release, BenikUI will have a seperate addon to override ElvUI name and damage font, to fit with BenikUI. What was added in 0.37b wasn't working as intended.
*Added option for the actionbars switch buttons. The user can now choose on which bar (1 or 2) the Switch buttons will show.
*Added style in WorldMap (needs testing for taints). The style applies only on small and quest map not on the big map.
*Fixed a visibility bug when the game menu and the bags were opened.
*Fine tune the install profile.

[b]0.38beta[/b] (Mar 25, 2014)
*Done with skin styling. Not with this result without Azilroka. Big thanks :)
*Added BenikUI Style in TinyDPS skin

[b]0.37beta[/b] (Mar 23, 2014)
*Azilroka's magic touch overhauled the styling functions and the skins. Still issues to solve though.
*Added option in ElvUI options -> General -> Media -> Fonts, that will force (or not) BenikUI fonts on names and combat text. This requires a client restart to apply.

[b]0.36beta[/b] (Mar 23, 2014)
*Made the prev issue permanent.

[b]0.35beta[/b] (Mar 23, 2014)
*Fixed an overnight Tokens Dashboard issue.

[b]0.30beta[/b] (Mar 23, 2014)
*Fixed all(?) rep/xp issues on playerbar.
*Almost re-wrote the Tokens Dashboard.
*Finished the Dashboards width options.
*Added decoration in Recount (not embedded) Window. (AddOnSkins_ElvUI required).
*Added decoration in Skada (not embedded) Window. (AddOnSkins_ElvUI required).
*Disabled the Auras UpdateHeader function edit (for smaller aura icons height). Isn't updating..
*Minor file cleanup.

[b]0.25beta[/b] (Mar 21, 2014)
*Fixed most rep/xp issues on playerbar. 

[b]0.20beta[/b]
*Initial beta Release